<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@drawable/borde_card">

            <TextView
                android:id="@+id/tvContactoTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Contact"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_gravity="center" />

            <EditText
                android:id="@+id/etAsunto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/asunto"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:focusableInTouchMode="true"
                android:background="@android:color/transparent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                android:background="@color/black" />

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_marginTop="20dp"
                android:hint="@string/nombre"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:focusableInTouchMode="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                android:background="@color/black" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_marginTop="20dp"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:focusableInTouchMode="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                android:background="@color/black" />

            <EditText
                android:id="@+id/etConsulta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_marginTop="20dp"
                android:hint="@string/consulta_hint"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="18sp"
                android:focusableInTouchMode="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                android:background="@color/black" />

            <Button
                android:id="@+id/btnEnviarConsulta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enviar"
                android:textColor="@color/white"
                android:layout_marginTop="24dp"
                android:textSize="20sp"
                android:backgroundTint="@color/azul_electrico"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
